--- a/paletteduck-client/src/index.css
+++ b/paletteduck-client/src/index.css
@@ -26,8 +26,8 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100vh;
-  overflow: hidden;
+  min-height: 100vh;
+  overflow: auto;
 }
 
 body {
